Fix: color contrast improvements for green and orange

--- a/scss/byway-styles/_variables.scss
+++ b/scss/byway-styles/_variables.scss
@@ -1,6 +1,6 @@
 /* Variables for Byways */
 :root {
-  --forestgreen: #008639;
+  --forestgreen: #00883a;
   --mangotango: #c15700;
   --goldenrod: #DBA510;
   --steelblue: #006B94;
@@ -27,7 +27,7 @@
   color: var(--outerspace);
 }
 // Color Vars
-$forestgreen: #008639;
+$forestgreen: #00883a;
 $mangotango: #c15700;
 $goldenrod: #DBA510;
 $steelblue: #006B94;
